made some changes to the css

--- a/style.css
+++ b/style.css
@@ -1,433 +1,313 @@
-@import url('http://fonts.cdnfonts.com/css/averta-standard');
-
-
+@font-face {
+    font-family: Averta;
+    src: url(https://res.cloudinary.com/dafsch2zs/raw/upload/v1596618987/Zuri%20Landing/AvertaDemoPECuttedDemo-Regular_dghpn7.otf);
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-
-body{
-    font-family: 'Averta Standard', sans-serif;
-    /* font-weight: 400; */
-}
-
-
-    /* vertical-align: middle; */
-
-
-/* home styling starts here */
-
-/* HERO SECTION STYLING */
-.hero-container{
-    height: 800px;
-    background-image: url(./imgforhome/hero-bg.svg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: repeat;
-}
-
-.logo-img1{
-    display: flex;
-    margin: auto;
-    padding-top: 70px;
-    margin-bottom: 70px;
-    justify-content: center;
-    align-items: center;
-}
-
-.hero-main{
-    max-width: 700px;
-    text-align: center;
-    /* display: flex; */
-    flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
-    margin: auto;
-    padding: 10px;
-}
-
-.hero-main h2{
-    font-size: 32px;
-    text-align: center;
-    color: #514949;
-    line-height: 48px;
-    opacity: 0.9;
-    margin-bottom: 40px;
-}
-.hero-main p{
-    margin-bottom: 70px;
-    line-height: 24px;
-    color: #514949;
-}
-
-.hero-main a{
-    text-decoration: none;
-    color: #e7332b;
-}
-
-
-section .one{
-    background-color: #fff;
-    overflow: hidden;
-}
-
-.btn{
-   color: #fff;
-   /* width: 300px; */
-}
-
-.btn button{
-    font-size: 15px;
-    height: 48px;
-    /* width: 220px; */
-    border-radius: 0px;
-    outline: none;
-    color: #fff;
-    /* border: transparent; */
-    padding: 0px 30px;
-    margin: 10px 10px;
-}
-
-.break{
-    display: none;
-}
-
-.btn a:last-child button{
-    color: #e7332b;
-}
-
-.btn a:last-child button:hover{
-    color: white;
-}
-
-
-.red-filled{
-    border: transparent;
-    background-color: #e7332b;
-}
-
-.red-filled:hover{
-    background-color: #fff;
-    border: 1px solid #e7332b;
-    color: #e7332b;
-}
-
-.red-outlined{
-    /* color: orangered; */
-    border: 1px solid #e7332b;
-    outline: #e7332b;
-    background-color: #fff;
-}
-
-.red-outlined:hover{
-    background-color: #e7332b;
-    color: #fff;
-
-}
-
-section.one{
-    background-color: #fff;
-    overflow: hidden;
-}
-
-.wrapper{
-    text-align: center;
-    margin: 0 auto;
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.xxx{
-    color: #e7332b;
-    font-size: 15px;
-    margin-top: 140px;
-}
-
-.motto{
-    color: #514949;
-    font-size: 24px;
-    text-align: center;
-    margin-top: 9px;
-    margin-bottom: 65px;
-}
-
-    /* display: block; */
-
-  
-.cards{
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    max-width: 1240px !important;
-    margin: 0 auto;
-}
-
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin-left: -15px;
-    margin-right: -15px;
-    /* margin-bottom: 40px; */
-}
-
-.col{
-    z-index: 1;
-    position: relative;
-    max-width: 31.2%;
-    flex: 0 0 31.2%;
-    /* margin-left: 15px; */
-    margin-right: 15px;
-    text-align: start;
+body {
     margin: 0;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+}
+a{
+    text-decoration: none;
 }
 
-.m-15{
-    margin:0 1.8rem;
-}
 
-.col-card{
+
+/* Hero section styles */
+.hero_section{
+    display: flex;
+    justify-content: center;
     width: 100%;
-    /* height: 511px; */
-    background-color: #fffafa;
-    padding: 61px 47px 82px 36px;
+    background-image: url("https://zuri.team/img/hero-bg.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    height: 122vh;
+    
 }
-
-.col-card img{
-    margin-bottom: 48px;
+.hero_content{
+    width: 50vw;
+    text-align: center;
 }
-.dotimg{
-    width: 100%;
-    position: absolute;
-    left: -120px;
-    top: -75px;
-    z-index: -1;
+.zuri_logo{
+    padding: 10vh 0;
+    padding-bottom: 5vh;
 }
-
-.col-card p{
-    line-height: 24px;
+.hero_txt{
+    color: #514949;
     opacity: 0.9;
+    font-weight: 500;
+}
+.hero_colored_txt{
+    color: #eb5850;
+    font-weight: 600;
+}
+.hero_heading{
+    font-size: 28px;
+    margin: 5vh auto;
+    color: #514949;
+    opacity: 0.9;
+}
+.hero_btn_container{
+    margin: 15vh 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    gap: 2vw;
+}
+.new_to_indistry{
+    padding: 2.5vh 3vw;
+    font-weight: 600;
+    background-color: #E7332B;
+    color: #fff;
+    border: 0;
+    transition: 0.2s all;
+    font-size: 0.9rem;
+    align-self: center;
+}
+.new_to_indistry:hover{
+    color: #E7332B;
+    background-color: #fff;
+    border: 1px solid #E7332B;
+}
+.need_experience{
+    padding: 2.5vh 3vw;
+    border: 0;
+    font-weight: bolder;
+    background: #fff;
+    color: #E7332B;
+    border: 1px solid #E7332B;
+    transition: 0.2s all;
+    font-size: 0.9rem;
+}
+.need_experience:hover{
+    background-color: #E7332B;
+    color: #fff;
+}
+
+
+/* Activity section */
+.activity_section{
+    margin-bottom: 30vh;
+    position: relative;
+}
+.left_activity_bg{
+    width: 25vw;
+    position: absolute;
+    left: 0;
+}
+.right_activity_bg{
+    width: 25vw;
+    position: absolute;
+    right: 0;
+}
+.activity_heading{
+    text-align: center;
+}
+.activity_heading_sm{
+    font-size: 16px;
+    color: #E7332B;
+    margin-top: 141px;
+    font-weight: 600;
+}
+.activity_heading_lg{
+    font-size: 2rem;
+    line-height: 3rem;
+    opacity: 0.8;
+}
+
+.activity_boxex_wrapper{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 85vw;
+    margin: 9vh auto;
+    grid-gap: 2vw;
+}
+.custom_activity_card{    
+    background-color: #FFFAFA;
+    padding: 8vh 2vw 20vh 2vw;
     font-size: 16px;
     color: #514949;
-    text-align: left;
-    margin-bottom: 1rem;
+    opacity: 0.9;
+    line-height: 1.5;
 }
-
-.col-card h3 a{
-    text-decoration: none;
-    color: #e7332b;
-    text-align: left;
-    font-weight: lighter;
+.activity_card_img{
+    margin-bottom: 2rem;
+}
+.activity_card_txt{
+    margin-bottom: 2.5vh;
+    color: #514949;
+    opacity: 0.9;
+    font-size: 16px;
+    font-weight: 500;
+}
+.card_link{
+    font-weight: 700;
+    color: #E7332B;
     opacity: 0.9;
 }
 
-.dotimg2{
-    width: 100%;
-    position: absolute;
-    right: -120px;
-    top: -75px;
-    z-index: -1;
-}
 
-/* FOOTER STYLING STARTS HERE */
-.footer{
-    margin-top: 215px;
-    max-width: 1240px !important;
-    margin-left: auto;
-    margin-right: auto;
-}
 
-.footer-container{
+
+/* Footer */
+.footer_h3{
+    color: #514949;
+}
+.footer_grid{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 56px;
+    width: 90vw;
+    /* border-bottom: 2px solid black; */
+    margin: 2vh auto;
     padding: 20px;
-    text-align: left;
+    padding-bottom: 15vh;
 }
-
-.footer h3{
-    color: #514949;
-    font-weight: bold;
-    line-height: 24px;
-    margin-bottom: 0.5rem;
-
+.footer_logo{
+    width: 10vw;
 }
-
-.second a{
-    text-decoration: none;
-    color: #e7332b;
-}
-
-.second p{
-    margin-bottom: 1rem;
-}
-
-.third p{
-    font-size: 14px;
-    color: #514949;
+.footer_address{
+    width: 16vw;
+    font-weight: 400;
     opacity: 0.9;
-    line-height: 20px;
-    margin-bottom: 1rem;
 }
-
-.third a{
-    color: #e7332b;
-    text-decoration: none;
+.footer_social_media_wrapper{
+    width: 11vw;
 }
-
-.fourth img{
-    width: 18px;
-    margin-right: 5px;
+/* .social_media_flex{
+    display: flex;
+    justify-content: space-around;
+    width: 40vw;
+    align-self: center;
+    margin: 0.5vh auto;
+} */
+.footer_list, .footer_mail{
+    line-height: 2.5;
 }
-
-.line{
-    margin: 1rem;
+.footer_grid ul{
+    list-style: none;
+    transition: 0.2s all;
 }
-
-.footer hr{
-    opacity: 0.2;
-    border: 0.7px solid #514949;
+.footer_social_media{
+    width: 1.5vw;
+    margin-top: 2vh;
 }
-hr{
-    overflow: visible;
+.colored_txt{
+    font-weight: 450;
+    color: #E7332B;
 }
-.copyright{
+.copyright_txt{
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.copyright p{
+    margin: 5vh;
+    font-weight: 700;
     color: #514949;
-    line-height: 24px;
-    font-weight: bold;
-    margin-top: 32px;
-    padding-bottom: 95px;
-    margin-bottom: 1rem;
+    margin-bottom: 5.5rem;
+    opacity: 0.85;
 }
 
-/* FOOTER STYLING ENDS HERE */
 
-/* MEDIA QUERIES FOR HOME PAGE STARTS HERE */
-@media screen and (max-width:1199px) {
-    .dotimg, .dotimg2{
+
+
+
+
+/* Responsiveness */
+@media (max-width: 1100px) {
+    .hero_content{
+        width: 80vw;
+    }
+    .zuri_logo{
+        padding: 15vh 0;
+        margin-bottom: 0;
+    }
+    .hero_heading{
+        font-size: 1.8rem;
+        margin-top: 0;
+    }
+    .new_to_indistry, .need_experience{
+        font-size: 1rem;
+        font-weight: 600;
+    }
+    .left_activity_bg, .right_activity_bg{
         display: none;
     }
 }
 
-@media screen and (max-width:991px) {
-    .row{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
 
-    .col{
-        /* width: 100%; */
-        /* flex: 0 0 100%; */
-        max-width: 100%;
-        margin-left: 15px;
-        margin-bottom: 48px;
-        margin-right: 15px;
-        /* height: auto; */
-        /* padding-bottom: 15px; */
+@media (max-width: 990px) {
+    .activity_boxex_wrapper{
+        width: 90vw;
+        grid-template-columns: 1fr;
+    }
+    .custom_activity_card{
+        padding-left: 5vw;
+        padding-right: 5vw;
+    }
+    .activity_boxex_wrapper{
+        grid-gap: 7vh;
     }
 }
-@media screen and (max-width:768px) {
-    .logo-img1{
-        padding-top: 100px;
-    }
 
-    /* .btn button{
-        margin: 10px 50px;
-    } */
-    .btn{
-        display: block;
-        margin: auto;
+@media (max-width: 770px) {
+    .hero_content{
+        width: 95vw;
     }
-
-    .break{
-        display: block;
-    }
-    
-    .footer-container{
+    .footer_grid{
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        text-align: center; 
-    }
-
-    .first img{
-        margin-bottom: 15px;
-        width: 150px;
-    }
-
-    .footer h3{
-        font-size: 24px;
-        margin-top: 20px;
-    }
-
-    .footer h3 a p{
-    margin-bottom: 1rem;
-    }
-
-    .copyright{
+        width: 90vw;
         text-align: center;
     }
-
-    
+    .footer_logo{
+        width: 100%;
+        padding: 5vh 0;
+    }
+    .footer_address{
+        width: 100%;
+        margin: 5vh auto;
+    }
+    .zuri_logo{
+        width: 100%;
+        text-align: center;
+    }
+    .footer_social_media_wrapper{
+        width: 100%;
+    }
+    .activity_heading_sm {
+        margin-top: 60px;
+    }
+    .footer_social_media{
+        width: 4vw;
+    }
 }
 
-/* MEDIA QUERIES FOR HOME PAGE ENDS HERE  */
-
-/* TRAINING PAGE STYLING STARTS HERE */
 
 
-header{
-    padding-top: 15px;
-    padding-bottom: 15px;
+@media (max-width: 760px) {
+    .hero_btn_container{
+        flex-direction: column;
+    }
+    .activity_heading_lg{
+        font-size: 1.5rem;
+    }
 }
-
-.header{
-    display: flex;
-    width: 100%;
-    position: fixed;
-    z-index: 1100;
-    top: 0px;
-    left: auto;
-    right: 0;
+@media (max-width: 450px) {
+    .activity_heading_lg{
+        font-size: 1.3rem;
+    }
+    .footer_social_media{
+        width: 7vw;
+    }
+    .activity_boxex_wrapper{
+        grid-gap: 8vh;
+    }
 }
-
-.nav{
-    min-height: 65px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding: 0 !important;
-}
-
-.nav-content{
-    display: flex;
-    align-items: center;
-}
-
-.nav-content a{
-    margin-right: 2rem;
-    
-
-}
-
-.nav-links{
-    position: relative;
-    letter-spacing: 0.02857em;
-    min-width: 64px;
-    padding: 6px 8px;
-    color: #514949;
-    font-size: 18px;
-    line-height: 24px;
-}
-/* TRAINING PAGE STYLING ENDS HERE */
